--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
+        "vue-axios": "^2.0.2",
+        "vue-full-loading": "^1.0.3",
+        "vue-js-toggle-button": "^1.2.2",
         "vuex": "^3.0.1"
     }
 }
